# climate_check

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
notebooks/: climate.ipynb
notebooks/.ipynb_checkpoints/: climate-checkpoint.ipynb
pages/: 1_historical.py  1_temperature.py  2_precipitation.py
src/: ncei.py
